--- a/MemeMe 1.0/Info.plist
+++ b/MemeMe 1.0/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Allows permission to add photos to the photo library</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Allows permission to the photo library</string>
 	<key>NSCameraUsageDescription</key>
